fix body spacing for fixed nav

--- a/components/Header/Header.scss
+++ b/components/Header/Header.scss
@@ -1,5 +1,9 @@
 @import '../../styles/mixins';
 
+body {
+    padding-top: 60px;
+}
+
 .navbar {
     background-color: $primary;
     padding: 10px 0;
